tests/ui/notminir.min.stderr
error: at tests/ui/notminir.min:1: expected 'func' token
this is not a minir file.
error: Fatal error occurred; aborting
